--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: demo-quarkus
-          image: quay.io/rlam/demo-quarkus:1.0.0
+          image: image-registry.openshift-image-registry.svc:5000/cicd-operez/demo-quarkus:operez
           ports:
             - containerPort: 8080
               protocol: TCP
